[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "t2v_metrics"
version = "1.1"
description = "Evaluating Text-to-Visual Generation with Image-to-Text Generation."
authors = [
    {name="Zhiqiu Lin", email="zl279@cornell.edu"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "ftfy>=6.1.1",
    "tqdm>=4.64.1",
    "gdown>=4.7.1",
    "huggingface-hub>=0.19.4",
    "matplotlib>=3.6.2",
    "numpy>=1.26.2",
    "open-clip-torch>=2.23.0",
    "openai>=1.29.0",
    "opencv-python>=4.6.0.66",
    "opencv-python-headless",
    "pandas>=2.1.4",
    "scipy>=1.11.4",
    "sentencepiece>=0.1.99",
    "transformers",
    "datasets>=2.15.0",
    "tokenizers",
    "omegaconf",
    "iopath",
    "fairscale",
    # for clipscore
    "scikit-learn",
    "pycocoevalcap",
    "image-reward",
    "hpsv2",
    # Video Model Additional Requirements
    "llava @ git+https://github.com/LLaVA-VL/LLaVA-NeXT.git",
    "fire==0.4.0",
    "tiktoken>=0.7.0",
    "peft==0.5.0",
    "decord",
    "easydict",
    "av",
    "icecream",
    "markdown2",
    "pydantic",
    "accelerate",
    "shortuuid",
    "bitsandbytes",
    "timm",
    "requests",
    "httpx==0.24.0",
    "uvicorn",
    "einops-exts",
    "einops",
    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.5.8/flash_attn-2.5.8+cu122torch2.3cxx11abiFALSE-cp310-cp310-linux_x86_64.whl",
    "PyYAML",
    "wandb",
    "moviepy",
    "google-generativeai>=0.8.2",
    "apex==0.9.10dev",
    "deepspeed==0.10.1",
    "fvcore==0.1.5.post20221221",
    "imageio==2.31.1",
    "librosa==0.10.1",
    "Pillow==10.0.0",
    "psutil==5.9.5",
    "soundfile==0.12.1",
    "termcolor==2.4.0",
    "qwen-vl-utils"
]

[tool.setuptools]
include-package-data = true
packages = ["t2v_metrics", "t2v_metrics.models"]

[tool.setuptools.package-data]
't2v_metrics' = ['**/*.json', '**/*.yaml']

[project.urls]
Home = "https://linzhiqiu.github.io/papers/vqascore"