[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "t2v_metrics"
version = "3.1"
description = "Evaluating Text-to-Visual Generation with Image-to-Text Generation."
authors = [
    {name="Zhiqiu Lin", email="zl279@cornell.edu"},
    {name="Chancharik Mitra", email="chancharikm@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]


dependencies = [
    # Core ML
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
    "transformers>=4.52.0",
    "accelerate>=0.30.0",
    "tokenizers>=0.19.0",
    "huggingface-hub>=0.19.4",
    "timm>=1.0.15",
    "einops",
    "bitsandbytes",

    # Qwen models
    "qwen-vl-utils[decord]",
    "qwen-omni-utils[decord]",

    # API models
    "openai>=1.0.0",
    "tiktoken>=0.7.0",
    "google-genai",

    # Vision / Video
    "opencv-python-headless>=4.11.0.86",
    "decord",
    "av",
    "moviepy",
    "pytorchvideo @ git+https://github.com/linzhiqiu/pytorchvideo.git",
    "imageio>=2.31.1",

    # Audio
    "soundfile>=0.12.1",
    "librosa>=0.10.1",

    # Data / Utilities
    "numpy>=1.26.4",
    "Pillow>=10.0.0",
    "scipy>=1.11.4",
    "pandas>=2.1.4",
    "sentencepiece>=0.1.99",
    "protobuf",
    "tqdm>=4.64.1",
    "requests",
    "pydantic",
    "gitpython",
    "PyYAML",
    "ftfy>=6.1.1",
    "matplotlib>=3.6.2",
    "gdown>=4.7.1",
    "datasets>=2.15.0",
    "psutil>=5.9.5",
    "termcolor>=2.4.0",
    "httpx>=0.24.0",
    "pytz",
    "func_timeout",
    "nltk",
    "rouge-score",

    # Evaluation scripts
    "pycocoevalcap",

    # NOTE: flash-attn must be installed manually to match your CUDA + PyTorch version:
    # pip install flash-attn --no-build-isolation
]

[tool.setuptools.packages.find]
where = ["."]
include = ["t2v_metrics*"]

[tool.setuptools.package-data]
't2v_metrics' = ['**/*.json', '**/*.yaml', '**/*.py']

[project.urls]
Home = "https://linzhiqiu.github.io/papers/vqascore"
